<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cpen321.circuitsolver.ui.HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_home"
        android:id="@+id/include" />


    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|center"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--app:srcCompat="@drawable/cam_icon" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/processing_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|center"
        app:backgroundTint="@color/processing_green"
        android:visibility="gone"
        app:srcCompat="@drawable/arrow_key" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_gravity="bottom|start"
        app:backgroundTint="@color/delete_brown"
        android:visibility="gone"
        app:srcCompat="@drawable/delete" />

    <!--<Button-->
        <!--android:text="Draw Circuit"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="60dp"-->
        <!--android:id="@+id/drawCircuitButton"-->
        <!--android:layout_gravity="top|left"-->
        <!--app:layout_anchor="@+id/include"-->
        <!--app:layout_anchorGravity="center_vertical|right" />-->

    <!--<RelativeLayout -->
        <!--android:background="@color/background"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->


        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            fab:fab_addButtonColorNormal="@color/colorPrimary"
            fab:fab_addButtonColorPressed="@color/white_pressed"
            fab:fab_addButtonPlusIconColor="@color/white"
            fab:fab_labelStyle="@style/menu_labels_style"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/draw_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="Draw Circuit"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_icon="@drawable/ic_draw"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/capture_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="Capture Circuit"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_icon="@drawable/ic_camera"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/load_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_title="Load Circuit Image"
                fab:fab_colorPressed="@color/white_pressed"
                fab:fab_icon="@drawable/ic_image"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>
    <!--</RelativeLayout>-->

</android.support.design.widget.CoordinatorLayout>
