...
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/saved_circuits"
        />
    <HorizontalScrollView
        android:layout_below="@id/saved_circuits_title"
        android:id="@+id/saved_circuits_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        >
        <LinearLayout
            android:id="@+id/saved_circuits_scroll"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

...
